screw "readable commit history" added SpeedrunPropertiesAPI for communicating properties between mods lots of changes and additions to the config api, including but not limited to adding CustomOption's, SpeedrunConfig is now an interface instead of annotation, enum values now have a default translation key, added Access annotation for options (getter/setter), added NumberOptionTextFieldWidget updated mixinextras

--- a/src/main/resources/assets/speedrunapi/lang/en_us.json
+++ b/src/main/resources/assets/speedrunapi/lang/en_us.json
@@ -2,5 +2,6 @@
   "speedrunapi.gui.speedrunConfigButton": "Mod Configs",
   "speedrunapi.gui.speedrunConfigTitle": "Speedrun API - Mod Configs",
   "speedrunapi.config.speedrunapi.option.anEnum": "Countdown",
-  "speedrunapi.config.speedrunapi.option.anEnum.description": "But in Twitch emotes, yaaayyyyy!"
+  "speedrunapi.config.speedrunapi.option.anEnum.description": "But in Twitch emotes, yaaayyyyy!",
+  "speedrunapi.config.speedrunapi.category.fillers": "2 boolean options"
 }
