add config storage objects

--- a/src/main/resources/assets/speedrunapi/lang/en_us.json
+++ b/src/main/resources/assets/speedrunapi/lang/en_us.json
@@ -3,5 +3,6 @@
   "speedrunapi.gui.speedrunConfigTitle": "Speedrun API - Mod Configs",
   "speedrunapi.config.speedrunapi.option.anEnum": "Countdown",
   "speedrunapi.config.speedrunapi.option.anEnum.description": "But in Twitch emotes, yaaayyyyy!",
-  "speedrunapi.config.speedrunapi.category.fillers": "2 boolean options"
+  "speedrunapi.config.speedrunapi.category.fillers": "2 boolean options",
+  "speedrunapi.config.speedrunapi.category.storage": "Example Option Storage"
 }
