implement support for setting custom translations for value text and mark @Config.Description.None for removal the values text can be modified by using "speedrunapi.config.<modid>.option.<option>.value" for all values or "speedrunapi.config.<modid>.option.<option>.value.<value>" to replace a specific value @Config.Description.None has been replaced by checking the translation for the description translationkey and returning null if the translation isnt present added javadocs to SpeedrunOption

--- a/src/main/resources/assets/speedrunapi/lang/en_us.json
+++ b/src/main/resources/assets/speedrunapi/lang/en_us.json
@@ -5,5 +5,9 @@
   "speedrunapi.config.speedrunapi.option.anEnum": "Countdown",
   "speedrunapi.config.speedrunapi.option.anEnum.description": "But in Twitch emotes, yaaayyyyy!",
   "speedrunapi.config.speedrunapi.category.fillers": "2 boolean options",
-  "speedrunapi.config.speedrunapi.category.storage": "Example Option Storage"
+  "speedrunapi.config.speedrunapi.category.storage": "Example Option Storage",
+  "speedrunapi.config.speedrunapi.option.aBooleanConfigOption.value.true": ":)",
+  "speedrunapi.config.speedrunapi.option.aBooleanConfigOption.value.false": ":(",
+  "speedrunapi.config.speedrunapi.option.anIntegerConfigOption.value": "Silliness Levels: %s",
+  "speedrunapi.config.speedrunapi.option.anIntegerConfigOption.value.44": "Silliness Overload!!!"
 }
