--- a/src/main/resources/assets/speedrunapi/lang/en_us.json
+++ b/src/main/resources/assets/speedrunapi/lang/en_us.json
@@ -2,13 +2,5 @@
   "speedrunapi.gui.config.button": "Mod Configs",
   "speedrunapi.gui.config.title": "Speedrun API - Mod Configs",
   "speedrunapi.gui.config.noConfigs": "§7There is no mods to configure here :(",
-  "speedrunapi.gui.config.unavailable": "This Config is unavailable right now!",
-  "speedrunapi.config.speedrunapi.option.anEnum": "Countdown",
-  "speedrunapi.config.speedrunapi.option.anEnum.description": "But in Twitch emotes, yaaayyyyy!",
-  "speedrunapi.config.speedrunapi.category.fillers": "2 boolean options",
-  "speedrunapi.config.speedrunapi.category.storage": "Example Option Storage",
-  "speedrunapi.config.speedrunapi.option.aBooleanConfigOption.value.true": ":)",
-  "speedrunapi.config.speedrunapi.option.aBooleanConfigOption.value.false": ":(",
-  "speedrunapi.config.speedrunapi.option.anIntegerConfigOption.value": "Silliness Levels: %s",
-  "speedrunapi.config.speedrunapi.option.anIntegerConfigOption.value.44": "Silliness Overload!!!"
+  "speedrunapi.gui.config.unavailable": "This Config is unavailable right now!"
 }
